feat(backend): complete speaker verification integration and passing unit tests